--- a/templates/actor/_partials/_bio.hbs
+++ b/templates/actor/_partials/_bio.hbs
@@ -1,6 +1,7 @@
 <section class="flexcol -gap-sm -bio-section">
   <div class="flexrow -gap-sm section-title">
     <h4 class="title">{{localize "l5r4.ui.sheets.bio"}}</h4>
+    {{> "systems/l5r4/templates/actor/_partials/_expand.hbs"}}
   </div>
   <section class="item-list -bio">
     {{#if bioClan}}
